--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>I have tried to solve some business problems in some sectors like BFSI, e-commerce, Ed-Tech etc by extracting the actionable insights from the historical data and which helps to optimize their revenue ,sales . I usually follow CRISP ML(Q) project management methodology.Feel free to explore my portfolio by clicking the button below to view my past projects.</p>
+            <p>I have resolved some business problems in some sectors like BFSI, e-commerce, Ed-Tech etc by extracting the actionable insights from the historical data which helped them to optimize their revenues and sales .Feel free to explore my portfolio by clicking the button below to view my past projects.</p>
 			<p><a href="https://github.com/biswajit-patro" class="btn btn-primary py-3 px-4">GitHub</a> </p>
           </div>
 	</section>
