--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>My interest to solve real-time business challenges through historical data , inclined me to this data domain from finance domain. By using data analytics, data science, and AI tools i love to craft and resolve new business problems independently. So,I bring a unique blend of financial expertise and business acumen to the table.</p>
+            <p>My passion for addressing real-world business challenges through historical data has led me to transition from the finance domain to the data sector. Leveraging data analytics, data science, and AI tools, I am driven to independently tackle and solve novel business issues. As a result, I offer a distinctive fusion of financial proficiency and strategic business insight.</p>
           </div>
         </div>
         <div class="row justify-content-center mt-5">
@@ -626,7 +626,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/14eR-zBeu5tgvfumvBRbGBM_6wYfgtpv5/view?usp=drive_link">My Resume Link</a></p>
+	            <p><a href="https://drive.google.com/file/d/1WmAdhyCpOYvNuNHwvaps4iqHKWN8dK-K/view?usp=drive_link">My Resume Link</a></p>
 	          </div>
           </div>
 
