--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         </div>
         <div class="row justify-content-center mt-5">
 			<div class="col-md-6 text-center ftco-animate">
-				<p><a href="https://drive.google.com/file/d/1WmAdhyCpOYvNuNHwvaps4iqHKWN8dK-K/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download Resume</a></p>
+				<p><a href="https://drive.google.com/file/d/1ayne1MaUZjQBwrNH_CGh47UKRCCMCmDX/view?usp=sharing" class="btn btn-primary py-4 px-5">Download Resume</a></p>
 			</div>
 		</div>
 
